--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,15 @@
     "name": "vivekpandey/timezones",
     "description": "Show timezones",
     "type": "library",
-    "license": "apache-2.0",
+    "license": "MIT",
     "authors": [{
         "name": "Vivek Pandey",
-        "email": "vivek@think201.com"
+        "email": "vivekmca2012@gmail.com"
     }],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": ">=5.6.4"
+    },
     "extra": {
         "laravel": {
             "providers": [
